Mingw builds require _WIN32_WINNT >= 0x0501 (XP) to use the IP_ADAPTER features of nsNotifyAddrListener. Also fix header include case for cross-compile builds. Bug #358023 r=bsmedberg